--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,5 @@
     <string name="text_appearance_caption_label">Caption</string>
     <string name="text_appearance_overline_label">Overline</string>
     <string name="searchbar_title">SearchView</string>
+    <string name="fabs_label_title">Fab menus</string>
 </resources>
