--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     <string name="text_appearance_overline_label">Overline</string>
     <string name="searchbar_title">SearchView</string>
     <string name="fabs_label_title">Fab menus</string>
+    <string name="chip_button_title">Button</string>
 </resources>
